--- a/LabProject/nbproject/project.properties
+++ b/LabProject/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=LabProject
-main.class=labproject.LabProject
+main.class=classes.LabProject
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
