--- a/LabProject/nbproject/private/private.properties
+++ b/LabProject/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/joao/.netbeans/22/build.properties
+user.properties.file=/Users/analuisa/Library/Application Support/NetBeans/21/build.properties
