--- a/LabProject/nbproject/private/private.properties
+++ b/LabProject/nbproject/private/private.properties
@@ -1,6 +1,1 @@
-compile.on.save=true
-<<<<<<< HEAD
-user.properties.file=C:\\Users\\zero\\AppData\\Roaming\\NetBeans\\21\\build.properties
-=======
-user.properties.file=/Users/analuisa/Library/Application Support/NetBeans/21/build.properties
->>>>>>> 25437bdeeff34dd76d50f355c4c94beaa9ae92cb
+user.properties.file=C:\\Users\\joaoc\\AppData\\Roaming\\NetBeans\\22\\build.properties
