Botões de sair para todas as telas

--- a/LabProject/nbproject/private/private.properties
+++ b/LabProject/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\joaoc\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=/Users/analuisa/Library/Application Support/NetBeans/21/build.properties
