feat: session manager

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /LabProject/nbproject/private/private.properties
 /LabProject/nbproject/private/private.xml
 /LabProject/dist/
+/LabProject/nbproject/private/
