feat: add exportJFrameToPdf method

--- a/LabProject/nbproject/project.properties
+++ b/LabProject/nbproject/project.properties
@@ -35,12 +35,22 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/LabProject
 endorsed.classpath=
 excludes=
+file.reference.io-7.1.9.jar=src\\libs\\io-7.1.9.jar
+file.reference.kernel-7.1.9.jar=src\\libs\\kernel-7.1.9.jar
+file.reference.layout-7.1.9.jar=src\\libs\\layout-7.1.9.jar
+file.reference.slf4j-api-2.0.6.jar=src\\libs\\slf4j-api-2.0.6.jar
+file.reference.slf4j-simple-2.0.6.jar=src\\libs\\slf4j-simple-2.0.6.jar
 file.reference.swingx-all-1.6.4.jar=src\\libs\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.io-7.1.9.jar}:\
+    ${file.reference.kernel-7.1.9.jar}:\
+    ${file.reference.layout-7.1.9.jar}:\
+    ${file.reference.slf4j-api-2.0.6.jar}:\
+    ${file.reference.slf4j-simple-2.0.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
