--- a/LabProject/nbproject/project.properties
+++ b/LabProject/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/LabProject
 endorsed.classpath=
 excludes=
 file.reference.io-7.1.9.jar=src\\libs\\io-7.1.9.jar
+file.reference.jcalendar-1.4.jar=src/libs/jcalendar-1.4.jar
 file.reference.kernel-7.1.9.jar=src\\libs\\kernel-7.1.9.jar
 file.reference.layout-7.1.9.jar=src\\libs\\layout-7.1.9.jar
 file.reference.slf4j-api-2.0.6.jar=src\\libs\\slf4j-api-2.0.6.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.kernel-7.1.9.jar}:\
     ${file.reference.layout-7.1.9.jar}:\
     ${file.reference.slf4j-api-2.0.6.jar}:\
-    ${file.reference.slf4j-simple-2.0.6.jar}
+    ${file.reference.slf4j-simple-2.0.6.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
